<resources>
    <string name="app_name">SoccerOrganizer</string>
    <string name="ArbiNombres">Nombre(s)</string>
    <string name="ArbiApellPater">Apellido Paterno</string>
    <string name="ArbiApellMater">Apellido Materno</string>
    <string name="ArbiEdad">Edad</string>
    <string name="ArbiLocalidad">Localidad</string>
    <string name="AbiCalle">Calle</string>
    <string name="registrar">Registrar</string>
    <string name="equipos">EQUIPOS</string>
    <string name="title_activity_ubicacion_cancha">Map</string>
    <string name="goleslocal">Local</string>
    <string name="CodigoDeLiga">Ingresa el codigo de la liga</string>
    <string name="NombreDelEquipo">Nombre del equipo</string>
    <string name="NombreDtDueño">Nombre(s) del dueño O DT</string>
    <string name="ApellidoMaterno">Apellido Materno</string>
    <string name="ApellidoPaterno">Apellido Paterno</string>
    <string name="NombreJugador">Nombre(s) del jugador</string>
    <string name="posicionJU">Posicion</string>
    <string name="numroCami">Numero de playera</string>
    <string name="btnMenu">Menu</string>
    <string name="title_activity_ubicacion_canchas">UbicacionCanchas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edVisitante">Visitante</string>
    <string name="title_activity_maps">Map</string>
</resources>
