<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".ArbritosActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="39dp"
        android:text="ARBRITOS"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toTopOf="@+id/edNombA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@drawable/arbitro1" />

    <EditText
        android:id="@+id/edNombA"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="288dp"
        android:ems="10"
        android:hint="@string/ArbiNombres"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edapp"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ArbiApellPater"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edapm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNombA"
        app:layout_constraintVertical_bias="0.215" />

    <EditText
        android:id="@+id/edapm"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/ArbiApellMater"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/edapp"
        app:layout_constraintTop_toBottomOf="@+id/edNombA"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/etedad"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ArbiEdad"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edlocalidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edapp" />

    <EditText
        android:id="@+id/edlocalidad"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ArbiLocalidad"
        android:inputType="text|textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnResgistrarA"
        app:layout_constraintEnd_toStartOf="@+id/edCalle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etedad" />

    <EditText
        android:id="@+id/edCalle"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/AbiCalle"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnResgistrarA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/edlocalidad"
        app:layout_constraintTop_toBottomOf="@+id/etedad"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/btnResgistrarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edlocalidad" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toTopOf="@+id/edapp"
        app:layout_constraintEnd_toStartOf="@+id/edNombA"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.601"
        app:srcCompat="@drawable/addimgp" />

</android.support.constraint.ConstraintLayout>