<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".BienvenidoDtDueActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="212dp"
        android:layout_height="70dp"
        android:text="Bienvenido  Dueño De Liga"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TxtCodigoLiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <EditText
        android:id="@+id/TxtCodigoLiga"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginBottom="332dp"
        android:ems="10"
        android:hint="@string/CodigoDeLiga"
        android:inputType="textPersonName"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TxtNombreEquipo"
        android:layout_width="257dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/NombreDelEquipo"
        android:inputType="textPersonName"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtCodigoLiga"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/TxtNombreDueODt"
        android:layout_width="258dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/NombreDtDueño"
        android:inputType="textPersonName"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtNombreEquipo"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/TxtApeMaternoJu"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ApellidoMaterno"
        android:inputType="textPersonName"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/TxtApePaternoJu"
        app:layout_constraintTop_toBottomOf="@+id/TxtNombreDueODt"
        app:layout_constraintVertical_bias="0.161" />

    <EditText
        android:id="@+id/TxtApePaternoJu"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ApellidoPaterno"
        android:inputType="textPersonName"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TxtApeMaternoJu"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtNombreDueODt"
        app:layout_constraintVertical_bias="0.161" />

    <Spinner
        android:id="@+id/SpinnerCanchas"
        android:layout_width="111dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtApeMaternoJu"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/BtnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerCanchas"
        app:layout_constraintVertical_bias="0.673" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="129dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toTopOf="@+id/TxtCodigoLiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/leader" />

</android.support.constraint.ConstraintLayout>